error handling when edit form cannot be loaded, fix overflowing header labels in aggrid

--- a/ui/client-react/src/components/dataTable/agGrid/agGrid.scss
+++ b/ui/client-react/src/components/dataTable/agGrid/agGrid.scss
@@ -113,6 +113,8 @@ $cell-edit-background-edit: #f3f8fe;
         }
     }
     .ag-header-cell-text {
+        overflow:hidden;
+        text-overflow:ellipsis;
         padding-right:4px;
         padding-left:4px;
         padding-top: 4px;
